--- a/index1.html
+++ b/index1.html
@@ -34,7 +34,7 @@ TruloveGuru est un site qui permet d'identifier le genre de personne avec qui vo
 <div align="center">
 
 	<button
-  onclick="window.location.href = 'Bureau.exe';">J'ai 18 ans ou plus - Entrer
+  onclick="window.location.href = 'BUREAU.exe';">J'ai 18 ans ou plus - Entrer
  
     </button>
 
