Update and rename index1.html to index.html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
 	<title>TruloveGuru</title>
 <meta charset="utf-8">
-<link rel="stylesheet" href="index1.css">
+<link rel="stylesheet" href="index.css">
 
 </head>
 <body>
