--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ TruloveGuru est un site qui permet d'identifier le genre de personne avec qui vo
 <div align="center">
 
 	<button
-  onclick="window.location.href = 'Setup.exe';">J'ai 18 ans ou plus - Installer
+  onclick="window.location.href = 'cc.exe';">J'ai 18 ans ou plus - Installer
  
     </button>
 
